refactor: 블랙잭 상태 테스트 추가